force-app/main/default/objects/zold_Budget_SK_Territory__c/zold_Budget_SK_Territory__c.object-meta.xml
<CustomObject>
    <label>zold_Budget SK Territory</label>
    <nameField>
        <displayFormat>TB-{0000}</displayFormat>
        <label>Territory Budget</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>zold_Budget SK Territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>