force-app/main/default/objects/zold_Budget_SK_Territory__c/fields/Branch_and_LOB__c.field-meta.xml
<CustomField>
    <fullName>Branch_and_LOB__c</fullName>
    <label>Branch and LOB</label>
    <referenceTo>zold_Budget_SK_Branch__c</referenceTo>
    <relationshipName>Budget_SK_Territories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>