force-app/main/default/objects/zold_Budget_SK_Territory__c/fields/Percent_of_Budget__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Budget__c</fullName>
    <label>Percent of Budget</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>