force-app/main/default/objects/zold_Budget_SK_Territory__c/fields/Territory_Area__c.field-meta.xml
<CustomField>
    <fullName>Territory_Area__c</fullName>
    <formula>TerritoryTerritory_del__r.Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Area</label>
    <type>Text</type>
</CustomField>