force-app/main/default/objects/zold_Budget_SK_Territory__c/fields/Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner__c</fullName>
    <formula>TerritoryTerritory_del__r.Territory_Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Owner</label>
    <type>Text</type>
</CustomField>