force-app/main/default/objects/zold_Budget_SK_Territory__c/fields/Territory_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner_Manager__c</fullName>
    <formula>TerritoryTerritory_del__r.Sales_Manager__r.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Owner Manager</label>
    <type>Text</type>
</CustomField>