force-app/main/default/objects/zold_Budget_SK_Territory__c/fields/TerritoryTerritory_del__c.field-meta.xml
<CustomField>
    <fullName>TerritoryTerritory_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipName>Budget_SK_Territories_del</relationshipName>
    <type>Lookup</type>
</CustomField>